Add validation on NeTEx flexible area import